--- a/EFI/OC/Kexts/AX88179_178A.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/AX88179_178A.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18G2022</string>
+	<string>19G2021</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -31,17 +31,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11C29</string>
+	<string>12B5018i</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>11.0</string>
 	<key>DTSDKBuild</key>
-	<string>19B90</string>
+	<string>20A5374f</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx11.0</string>
 	<key>DTXcode</key>
-	<string>1130</string>
+	<string>1220</string>
 	<key>DTXcodeBuild</key>
-	<string>11C29</string>
+	<string>12B5018i</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>AX88179-Device</key>
